syntax = "proto3";
package author;

// Identities are pieces of data that Author can use to determine
// who is asking for authorization when it is happening through
// a proxy service. For example, when someone requests access through
// the editor `Rustica`, identities the following from the requesting client
// are sent through the `AuthorizeRequest` call:
//  Source IP
//  mTLS Identity data
//  SSH key fingerprint

// Important To Note
// The `identities` is not checked for correctness (though it may have other
// heurisitics applied to it). It should only contain data that has been
// verified by the editor.

message AuthorizeRequest {
    map<string, string> identities = 1;
    map<string, string> authorization_request = 2;
}

message AuthorizeResponse {
    map<string, string> approval_response = 1;
}

// This call adds data into Author for use in further authorization requests.
// For example, when a user adds a new key via the editor `Rustica`, it feeds
// into this.
message AddIdentityDataRequest {
    map<string, string> identities = 1;
    map<string, string> identity_data = 2;
}

message AddIdentityDataResponse {}

message SetPermissionsOnSSHKeyRequest {
    map<string, string> identities = 1;
    string fingerprint = 2;
    bool can_create_host_certs = 3;
    bool can_create_user_certs = 4;
    bool host_unrestricted = 5;
    bool principal_unrestricted = 6;
    //repeated string authorized_hosts = 7;
    //repeated string principals = 8;
    uint64 max_creation_time = 9;
    map<string, string> extensions = 10;
    string force_command = 11;
    bool force_source_ip = 12;
}

message SetPermissionsOnSSHKeyResponse {}

service Author {
    rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
    rpc AddIdentityData(AddIdentityDataRequest) returns (AddIdentityDataResponse);
    rpc SetPermissionsOnSSHKey(SetPermissionsOnSSHKeyRequest) returns (SetPermissionsOnSSHKeyResponse);
}